@@ -1,20 +1,19 @@
-# CODE_ANTICHEAT
-Project version 1.0
+Версия проекта 1.0
 
-To start use this repo you should have already installed Java 21 version (21.0.2 for example), Gradle 8.11.1, JavaFX 21.0.2.
+Чтобы начать использовать этот репозиторий, у вас уже должна быть установлена версия Java 21 (например, 21.0.2), Gradle 8.11.1, JavaFX 21.0.2.
 
-As default location useful file&directory i specify disk E:\\, but you can also change location of JavaDataBase directory and text.txt in public methods: getPathToFile() & getPathToDB(). 
+В качестве расположения полезного файла и каталога по умолчанию я указываю диск E:\, но вы также можете изменить расположение каталога базы данных Java и text.txt в общедоступных методах: getPathToFile() и getPathToDB().
 
-You can use EXAMPLE.txt to check programm. (Test.txt is WORKING FILE, not for example!)
+Вы можете использовать EXAMPLE.txt для проверки программ. (Test.txt это РАБОЧИЙ ФАЙЛ, а не для примера!)
 
-To open JAR file from shell use command with FX parametres. 
+Чтобы открыть JAR-файл из оболочки, используйте команду с параметрами FX.
 
-For example: java --module-path /path/to/javafx-sdk-21.0.2/lib --add-modules javafx.controls,javafx.fxml,javafx.web -jar build/libs/your-project-1.0-SNAPSHOT.jar
+Например: java --путь к модулю /path/to/javafx-sdk-21.0.2/lib --добавить модули javafx.controls,javafx.fxml,javafx.web -jar build/libs/your-project-1.0-SNAPSHOT.jar
 
-Also, you can find JavaDoc files in appropriate directory.
+Также вы можете найти файлы JavaDoc в соответствующем каталоге.
 
-To build project use Gradle commands in IDEA.
+Для сборки проекта используйте команды Gradle в IDEA.
 
-For example: ./gradlew clean build
+Например: ./gradlew clean build
 
-Author: Sabirullov Bulat
+Автор: Анучин Степан
